--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -1,4 +1,5 @@
 \documentclass[t,xcolor={dvipsnames}]{beamer}
+% \documentclass[t,xcolor={dvipsnames},aspectratio=141]{beamer}
 \usetheme{metropolis}
 
 \usepackage{nameref}
